[feat]: update dokcerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,7 +9,7 @@ RUN go mod download
 
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build
+RUN CGO_ENABLED=0 GOOS=linux go build -o api cmd/gohtmx/main.go
 
 # RUN
 FROM alpine:3.18
@@ -18,6 +18,6 @@ WORKDIR /apps/gohtmx/api
 COPY --from=build /apps/gohtmx/api/api .
 
 EXPOSE 1337
-CMD ["./api"]
+CMD ["./main"]
 
 HEALTHCHECK --interval=20s --timeout=3s --retries=3 --start-period=60s CMD curl -f http://localhost:1337/healthcheck || exit 1
