--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,20 +20,20 @@ services:
       interval: 10s
       retries: 5
 
-  api:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile
-    container_name: gohtmx-api
-    restart: always
-    ports:
-      - ${API_PORT}:${API_PORT}
-    networks:
-      - gohtmx
-    environment:
-      DB_HOST: db
-    depends_on:
-      - db
+  # api:
+  #   build:
+  #     context: .
+  #     dockerfile: docker/Dockerfile
+  #   container_name: gohtmx-api
+  #   restart: always
+  #   ports:
+  #     - ${API_PORT}:${API_PORT}
+  #   networks:
+  #     - gohtmx
+  #   environment:
+  #     DB_HOST: db
+  #   depends_on:
+  #     - db
 
   adminer:
     image: adminer
